2011-03-05  vadim  <vadim@netcitadel.com>

	* FWBMainWindow_q.ui: see #2162 menu item "File / Import Policy"
	renamed to "File / Import Firewall". This menu item launches
	wizard that imports existing iptables, Cisco router IOS or
	Cisco PIX/ASA config.

2011-03-04  vadim  <vadim@netcitadel.com>

	* IC_NetworkZonesPage.cpp (setNetworkZones): see #2161 policy
	import wizard shows the page where user can set up network zones
	of interfaces if firewall platform was determined to be PIX.

	* IC_PlatformWarningPage.cpp (initializePage): see #2161 "import
	workflow and automatic detection of firewall platform from the
	config file". When user imports existing firewall configuration,
	the GUI automatically detects firewall platform from the format
	of the config file and shows platform-specific warning to explain
	what parts of the config can and can not be imported. It also
	detects firewall host name where possible (currently Cisco IOS
	and ASA/PIX). Importer wizard has been reimplemented using
	QWizard and QWizardPage classes and its workflow significantly
	improved.

2011-03-01  vadim  <vadim@netcitadel.com>

	* importAddressListWizard/ImportAddressListWizard.cpp
	(ImportAddressListWizard): see #2163 code that imports addresses
	from a file in /etc/hosts format moved to its own wizard; using
	QWizard and QWizardPage classes with correct implementation of
	page sequencing and validation; old discovery druid has been
	disabled. SNMP discovery and ios/pix/iptables configuration import
	will move to their own wizards later.

2011-02-27  vadim  <vadim@netcitadel.com>

	* DiscoveryDruid.cpp (finishClicked): fixes #2156 "After import
	the firewall should be opened in object tree".

	* instDialog_ui_ops.cpp (readInstallerOptionsFromFirewallObject):
	fixes #2160 "Installer reports error "Generated script file
	<firewall>.fw not found."". The problem was intorduced earlier
	while fixing #2047

2011-02-26  vadim  <vadim@netcitadel.com>
