@@ -1,5 +1,11 @@
 2011-03-05  vadim  <vadim@netcitadel.com>
 
+	* importFirewallConfigurationWizard/IC_ProgressPage.cpp (logLine):
+	see #2183 "count errors and warnings generated by the importer and
+	show the numbers in the progress page of the wizard". Configuration
+	import wizard now shows counters of warnings and errors generated
+	by the importer.
+
 	* FWBMainWindow_q.ui: see #2162 menu item "File / Import Policy"
 	renamed to "File / Import Firewall". This menu item launches
 	wizard that imports existing iptables, Cisco router IOS or
